Finished Random Jok eAjax

--- a/client/error.html
+++ b/client/error.html
@@ -6,6 +6,7 @@
     <body>
         <h1>404 - File Not Found!</h1>
         <p>Check your URL, or your typing!!</p>
+        <p>Perhaps you are looking for <a href="joke-client.html">joke-client.html</a>?</p>
         <p>Diphthong</p>
     </body>
 </html>
