added message to index.html

--- a/client/index.html
+++ b/client/index.html
@@ -24,6 +24,7 @@
     
     <h1>Chess Saver</h1>
     <p>Get started with <a href="load.html">load.html</a> or <a href="save.html">save.html</a> or <a href="admin.html">admin.html</a></p>
+    <p>(NOTE: Load is pretty much the same as last time.  Most progress made was in <a href="save.html">save.html</a></p>
     
   </body>
 </html>
