--- a/client/load.html
+++ b/client/load.html
@@ -174,6 +174,16 @@
 
 <body>
   <header>
+    <nav>
+      <a href = "/">Home</a>
+      |
+      <span id="current">Load</a>
+      |
+      <a href = "/save.html">Save</a>
+      |
+      <a href = "/admin.html">Admin</a>
+      
+    </nav>
     <h1>Click Button to LOAD a random chess position!</h1>
   </header>
   <button id="load">Get Random Saved Position</button>
